<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/host_details"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:layout_margin="10dp" >

    <TextView
        android:id="@+id/host_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:text="@string/host_detail_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" >
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/host_detail_name_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dp"
	            android:text="@string/host_detail_name_name"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/host_detail_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/host_detail_default_name"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	    </LinearLayout>
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp" >
	
	        <TextView
	            android:id="@+id/host_detail_ip_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dp"
	            android:text="@string/host_detail_ip_name"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/host_detail_ip"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/host_detail_default_ip"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	    </LinearLayout>
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp" >
	
	        <TextView
	            android:id="@+id/host_detail_mac_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dp"
	            android:text="@string/host_detail_mac_name"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/host_detail_mac"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/host_detail_default_mac"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	    </LinearLayout>
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp" >
	
	        <TextView
	            android:id="@+id/host_detail_latitude_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dp"
	            android:text="@string/host_detail_latitude_name"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/host_detail_latitude"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/host_detail_default_latitude"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	    </LinearLayout>
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp" >
	
	        <TextView
	            android:id="@+id/host_detail_longitude_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dp"
	            android:text="@string/host_detail_longitude_name"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/host_detail_longitude"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/host_detail_default_longitude"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	    </LinearLayout>
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp" >
	
	        <TextView
	            android:id="@+id/host_detail_status_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dp"
	            android:text="@string/host_detail_status_name"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/host_detail_status"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/host_detail_default_status"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	    </LinearLayout>
        
    </LinearLayout>

</LinearLayout>
